# vegeta-terminal

./: .gitignore  LICENSE  README.md  contact2.py  pyproject.toml  setup.cfg  slice.py  vegeta  vegeta.py  vegeta_play.py
src/vegeta_terminal/: __init__.py  cli.py  core.py  play.py
