[metadata]
name = vegeta-terminal
version = 1.0.0
description = Vegeta — your terminal motivator. Animated pixel-art Vegeta greets you, powers up, and drops motivational quotes right in your shell.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Gabriele Salvo
keywords = terminal, cli, ascii-art, pixel-art, vegeta, dragon-ball, motivational, fun
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Operating System :: POSIX
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Games/Entertainment
    Topic :: Terminals

[options]
python_requires = >= 3.9
install_requires =
    Pillow >= 9.0
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[options.package_data]
vegeta_terminal = frames/*.png

[options.entry_points]
console_scripts =
    vegeta = vegeta_terminal.cli:main
